@@ -170,36 +170,6 @@ than having to continually download the latest version. Ex:
 The Stinger utility could then be accessed at https://pfhostname/proxies/tools/stinger.exe.
 EOT
 
-[services.pfredirect]
-type=text
-description=<<EOT
-Location of the pfredirect daemon.  The default setting should be fine.
-EOT
-
-[services.pfdetect]
-type=text
-description=<<EOT
-Location of the pfdetect daemon.  The default setting should be fine.
-EOT
-
-[services.pfmon]
-type=text
-description=<<EOT
-Location of the pfmon daemon.  The default setting should be fine.
-EOT
-
-[services.pfdhcplistener]
-type=text
-description=<<EOT
-Location of the pfdhcplistener daemon.  The default setting should be fine.
-EOT
-
-[services.pfsetvlan]
-type=text
-description=<<EOT
-Location of the pfsetvlan daemon.  The default setting should be fine.
-EOT
-
 [services.httpd]
 type=text
 description=<<EOT
