@@ -122,11 +122,6 @@ The Stinger utility could then be accessed at https://pfhostname/proxies/tools/s
   <a href='services.html#httpd'>httpd</a><br>
   <a href='services.html#named'>named</a><br>
   <a href='services.html#nessusd'>nessusd</a><br>
-  <a href='services.html#pfdetect'>pfdetect</a><br>
-  <a href='services.html#pfdhcplistener'>pfdhcplistener</a><br>
-  <a href='services.html#pfmon'>pfmon</a><br>
-  <a href='services.html#pfredirect'>pfredirect</a><br>
-  <a href='services.html#pfsetvlan'>pfsetvlan</a><br>
   <a href='services.html#snmptrapd'>snmptrapd</a><br>
   <a href='services.html#snort'>snort</a><br>
 <p><b>[servicewatch]</b><br>
