@@ -21,26 +21,6 @@ Location of the named binary.  Only necessary to change if you are not running t
 <a name=nessusd></a>
 <b>nessusd</b> <i>(text)</i><br>
 Location of the nessusd binary.  Only necessary if you are running nessusd locally and if you are not running the RPMed version.  <p>
-<a name=pfdetect></a>
-<b>pfdetect</b> <i>(text)</i><br>
-Default: /usr/local/pf/sbin/pfdetect<br>
-Location of the pfdetect daemon.  The default setting should be fine.<p>
-<a name=pfdhcplistener></a>
-<b>pfdhcplistener</b> <i>(text)</i><br>
-Default: /usr/local/pf/sbin/pfdhcplistener<br>
-Location of the pfdhcplistener daemon.  The default setting should be fine.<p>
-<a name=pfmon></a>
-<b>pfmon</b> <i>(text)</i><br>
-Default: /usr/local/pf/sbin/pfmon<br>
-Location of the pfmon daemon.  The default setting should be fine.<p>
-<a name=pfredirect></a>
-<b>pfredirect</b> <i>(text)</i><br>
-Default: /usr/local/pf/sbin/pfredirect<br>
-Location of the pfredirect daemon.  The default setting should be fine.<p>
-<a name=pfsetvlan></a>
-<b>pfsetvlan</b> <i>(text)</i><br>
-Default: /usr/local/pf/sbin/pfsetvlan<br>
-Location of the pfsetvlan daemon.  The default setting should be fine.<p>
 <a name=snmptrapd></a>
 <b>snmptrapd</b> <i>(text)</i><br>
 Default: /usr/sbin/snmptrapd<br>
